@@ -3,6 +3,13 @@ Date	Added
 AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO INTO TRUNK.
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
+2007/03/02
+	* Added new script function: setiteminfo. Now you can make custom items [Lupus]
+	- Updated script function setitemscript(itemID,script,WhichScript)
+		now u can set one of 3 item scripts: use/update, equip, unequip
+		But it works only if the original item had 3 non empty scriptsin ITEM_DB
+		can't fix this issue yet
+	- Check npc/sample/npc_test_setitemx.txt as example of setiteminfo & setitemscript
 2007/03/01
 	* Fixed the definition of warpwaitingpc so that it allows an optional
 	  argument (number of people to warp).
