@@ -28,6 +28,7 @@ Date		Added
 ======
 2007/03/01
 	* The Sign: Fixed possible exploit, thanks to happylight [Lupus]
+	- Added npc/sample/npc_test_setitemx.txt
 2007/02/28
 	* Fixes to Merchant/Smith skill quests according to ragnainfo wiki [DracoRPG]
 	- Added missing 1 Banana Juice requirement to Cart Revolution quest
